overflow for quiz flashcard fixed

--- a/frontend/src/components/active_quiz/quiz_flashcard/QuizFlashcard.scss
+++ b/frontend/src/components/active_quiz/quiz_flashcard/QuizFlashcard.scss
@@ -42,6 +42,7 @@
       text-align: center;
       padding: 20px;
       padding-bottom: 30px;
+      overflow: hidden;
 
       .answer-container {
         .answer-heading {
